# EverBrain

./: .gitignore  EverBrain.spec  README.md  everbrain.iss  pyproject.toml
src/everbrain/: __init__.py  main.py
src/everbrain/cli/: __init__.py  graph.py  init.py  snapshot.py  start.py  stop.py  summary.py  task.py
src/everbrain/core/: __init__.py  graph.py  handoff.py  session.py  task.py  venv.py
src/everbrain/git/: __init__.py  git_ops.py
src/everbrain/models/: __init__.py  config.py
src/everbrain/storage/: __init__.py  sqlite.py
src/everbrain/utils/: __init__.py  console.py  version.py
tests/: __init__.py
