[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "everbrain"
version = "0.1.0"
description = "Persistent workflow continuity for AI-assisted software development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EverBrain Team"},
]

dependencies = [
    "typer[all]==0.12.3",
    "rich==13.7.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "gitpython==3.1.40",
    "watchdog==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "mypy==1.7.1",
    "black==23.12.1",
    "ruff==0.1.11",
]

[project.scripts]
eb = "everbrain.main:app"

[tool.setuptools]
packages = ["everbrain"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP"]
